Crash on MacBook Pro 2015 Retina when start to render on 2nd non retina display #47782

Closed
opened 2016-03-13 18:38:49 +01:00 by Christian Bacaj · 9 comments

MacBook Pro 2015 Retina 16GB RAM and a 2nd screen attached (1920x1080 non retina)
OSX 10.11.3, built-in graphics card, below more infos

Blender Version
2.76b Hash f337fea
Worked: (optional)

Short description of error
When I render anything on the MacBook screen, everything is alright. When I drag the Blender window to the 2nd non retina screen and when I click on render, Blender crashes. When I move the window from the retina to the no-retina screen while the splash-screen is visible, the splash-screen is scaled-up too big.

This does`t appear on my MacMini which is connected to 2 non-retina displays. It's seems to be an issue with the MacBook retina + a 2nd non retina screen.

Below the full crash report:
crash log.txt

MacBook Pro 2015 Retina 16GB RAM and a 2nd screen attached (1920x1080 non retina) OSX 10.11.3, built-in graphics card, below more infos **Blender Version** 2.76b Hash f337fea Worked: (optional) **Short description of error** When I render anything on the MacBook screen, everything is alright. When I drag the Blender window to the 2nd non retina screen and when I click on render, Blender crashes. When I move the window from the retina to the no-retina screen while the splash-screen is visible, the splash-screen is scaled-up too big. This does`t appear on my MacMini which is connected to 2 non-retina displays. It's seems to be an issue with the MacBook retina + a 2nd non retina screen. Below the full crash report: [crash log.txt](https://archive.blender.org/developer/F289849/crash_log.txt)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @cbac

Added subscriber: @cbac

Added subscriber: @Sergey

Added subscriber: @Sergey
Martijn Berger was assigned by Sergey Sharybin 2016-03-22 16:59:59 +01:00

Added subscriber: @MartijnBerger

Added subscriber: @MartijnBerger

@MartijnBerger, are you able to check if the issue is reproduceable for you?

@MartijnBerger, are you able to check if the issue is reproduceable for you?

This issue was referenced by 42f6252f2d

This issue was referenced by 42f6252f2d3d08f07d395f581c9acc419c670c19

Added subscriber: @brecht

Added subscriber: @brecht

The crash appears to be fixed after the fix for #48164, though I wasn't able to reproduce it reliably so I'm not 100% sure. Tomorrow's build from https://builder.blender.org/download/ will have that fix.

The splash screen issue I can confirm. That seems difficult to fix, it would either require us to rescale the popup coordinates, or change the design so the pixel size is not encoded in the popup. A simple workaround is to automatically close the splash and other popups, which isn't a great solution but probably won't bother anyone either, so that's what I've done now.

The crash appears to be fixed after the fix for #48164, though I wasn't able to reproduce it reliably so I'm not 100% sure. Tomorrow's build from https://builder.blender.org/download/ will have that fix. The splash screen issue I can confirm. That seems difficult to fix, it would either require us to rescale the popup coordinates, or change the design so the pixel size is not encoded in the popup. A simple workaround is to automatically close the splash and other popups, which isn't a great solution but probably won't bother anyone either, so that's what I've done now.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47782
No description provided.