Fix T47782: popups with wrong size when switching from retina to non-retina on OS X.